--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ClassicBook</string>
+    <string name="ID">학번</string>
+    <string name="PW">비밀번호</string>
 </resources>
