--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">ClassicBook</string>
     <string name="ID">학번</string>
     <string name="PW">비밀번호</string>
+    <string name="login_SejongClassic">세종대학교\n고전독서인증</string>
 </resources>
