--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,22 +7,99 @@
     <string name="auto_login">자동로그인</string>
     <string name="title_activity_main">MainActivity</string>
 
-
+    <!--메뉴이름-->
     <string name="navi_1">인증 현황</string>
     <string name="navi_2">예약 신청</string>
     <string name="navi_3">도서 검색</string>
     <string name="navi_4">설정</string>
 
     <string name="user_hello">서성준님,\n안녕하세요</string>
-
+    <!--1번메뉴텍스트-->
     <string name="cat_1">서양의역\n사와사상</string>
     <string name="cat_2">동양의역\n사와사상</string>
     <string name="cat_3">동서양의\n문학</string>
     <string name="cat_4">과학사상\t</string>
 
+    <!--1번 도서상세권수-->
     <string name="cat_cnt">0/0권</string>
+
 
     <string name="home_text_thisweektest">이번 주 시험 응시 예정</string>
     <string name="home_text_test_date">2019\-03\-19\n10:00~10:20</string>
     <string name="home_text_test_info">광108B\n도서명: 실락원</string>
+
+
+    <!--도서목록-->
+
+    <string-array name="book_cat">
+        <item>영역명</item>
+        <item>서양의역사와사상</item>
+        <item>동양의역사와사상</item>
+        <item>동서양의문학</item>
+        <item>과학사상</item>
+    </string-array>
+    <string-array name = "book_name_default">
+        <item>도서명</item>
+    </string-array>
+    <string-array name="book_name_seoyang">
+        <!--서양-->
+        <item>도서명</item>
+        <item>플라톤의 국가</item><item>정치학</item><item>키케로의 의무론</item>
+        <item>게르마니아</item><item>성어거스틴의 고백록</item><item>군주론</item>
+        <item>신기관</item><item>리바이어던</item><item>통치론</item>
+        <item>사회계약론</item><item>공리주의</item><item>존 스튜어트 밀 자유론</item>
+        <item>체사레 벡카리아의 범죄와 형벌</item><item>종교의 자연사</item><item>짜라투스트라는이렇게 말했다</item>
+        <item>프로테스탄티즘의 윤리와 자본주의 정신</item><item>미국의민주주의 1</item>
+        <item>역사란무엇인가</item><item>도덕적인간과비도덕적사회</item><item>성과속</item>
+        <item>소유냐삶이냐</item><item>국화와칼</item><item>심리학과 종교</item>
+        <item>슬픈열대</item><item>자본주의,사회주의,민주주의</item><item>서양미술사</item>
+        <item>성의역사 1권</item><item>감시와 처벌</item><item>로마제국쇠망사</item>
+        <item>역사의 종말</item><item>종교의 의미와 목적</item>
+        <item>낭만적 거짓과 소설적 진실</item><item>오래된 미래</item>
+        <item>위험사회</item><item>황금가지</item><item>파이돈</item><item>예루살렘의 아이히만</item>
+    </string-array>
+    <string-array name="book_name_dongyang">
+        <!--동양-->
+        <item>도서명</item>
+        <item>호모루덴스</item><item>성학십도</item><item>북학의</item><item>조선상고사</item>
+        <item>삼국유사</item><item>논어-슬기바다1</item><item>맹자-슬기바다2</item><item>대학,중용-슬기바다3</item>
+        <item>노자의목소리로듣는도덕경</item><item>장자</item><item>사기열전1</item><item>생활의 발견</item>
+        <item>대동서</item><item>간디 자서전</item><item>한 젊은 유학자의 초상</item><item>묵자</item>
+        <item>춘추좌전(상)</item><item>유배지에서 보낸 편지</item><item>산해경</item><item>한비자</item>
+    </string-array>
+    <string-array name="book_name_dong_seo">
+        <!--동서양-->
+        <item>도서명</item>
+        <item>젊은 예술가의 초상</item><item>구토</item><item>실락원</item><item>파우스트</item>
+        <item>일리아스 오디세이아</item><item>원전으로 읽는 변신이야기</item><item>인간의 조건</item>
+        <item>양철북</item><item>페스트</item><item>카라마조프씨네 형제들</item>
+        <item>안나카레니나</item><item>백년동안의 고독</item><item>변신,시골의사</item>
+        <item>타이스,붉은백합</item><item>열하일기</item><item>서유견문</item>
+        <item>파한집</item><item>난중일기</item><item>천변풍경</item><item>위대한 유산 1,2</item>
+        <item>닥터지바고</item><item>변신인형</item><item>주홍글씨</item><item>걸리버여행기</item>
+        <item>모비딕</item><item>마음</item><item>픽션들</item><item>농담</item><item>아버지와 아들</item>
+        <item>삼대</item><item>적과 흑</item><item>대위의 딸</item>
+    </string-array>
+    <string-array name="book_name_science">
+        <!--과학사-->
+        <item>도서명</item>
+        <item>프린키피아3(프린키피아:자연과학의 수학적 원리)</item><item>종의기원</item>
+        <item>부분과 전체</item><item>과학혁명의 구조</item><item>카오스</item>
+        <item>코스모스</item><item>총,균,쇠</item><item>엔트로피</item>
+        <item>객관성의 칼날</item><item>같기도 하고 아니 같기도 하고</item>
+    </string-array>
+
+
+
+
+
+    <!--3번메뉴-->
+    <string name="text_library"><u>학술정보원</u></string>
+    <string name="text_library_search">고전도서 검색</string>
+    <string name="text_select_book1">영역명, 도서명 선택</string>
+
+
+
+    <!--4번메뉴-->
+
 </resources>
