--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -170,7 +170,7 @@
     <!--2번메뉴-->
     <string name="text_classic"><u>대양휴머니티칼리지</u></string>
     <string name="text_reserv_test">인증 예약 신청</string>
-    <string name="text_select_test_book">한달 내 날짜만 선택 가능, 일주일에 1건만 예약 가능, 주말/공휴일 예약 불가</string>
+    <string name="text_select_test_book">한달 내 날짜만 선택 가능, 일주일에 1건만 예약 가능, 주말 예약 불가</string>
     <string name="datepick">예약일자</string>
     <string name="text_time">시간: </string>
     <string name="text_loc">장소: </string>
