--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,9 @@
     <string name="navi_2">예약 신청</string>
     <string name="navi_3">도서 검색</string>
     <string name="navi_4">설정</string>
+    <string name="navi_rank">도서 랭킹</string>
+
+    <string name="rank_det">통과율 랭킹</string>
 
     <string name="user_hello">홍길동님,\n안녕하세요</string>
     <!--1번메뉴텍스트-->
@@ -226,4 +229,7 @@
 
     <!--4번메뉴-->
     <string name="profile">name님의 프로필</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
